--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+app_login:
+   path: /login
+   controller: App\Controller\LoginController::login
+
+app_logout:
+   path: /logout
+   controller: App\Controller\LoginController::logout
+
+homepage:
+   path: /
+   controller: App\Controller\HomepageController::index
